--- a/assets/CSS/main.css
+++ b/assets/CSS/main.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Exo:wght@400;500;700&display=swap');
 
 ::root {
-      --color: color(#fff);
+      --color: color(#fcfcfc);
 }
 
 p,
