--- a/assets/CSS/normalize.css
+++ b/assets/CSS/normalize.css
@@ -62,7 +62,7 @@ hr {
    */
 
 pre {
-      font-family: monospace, monospace; /* 1 */
+      font-family: monospace; /* 1 */
       font-size: 1em; /* 2 */
 }
 
@@ -117,7 +117,7 @@ strong {
 code,
 kbd,
 samp {
-      font-family: monospace, monospace; /* 1 */
+      font-family: monospace; /* 1 */
       font-size: 1em; /* 2 */
 }
 
